--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Hello! I'm Moe! This is Github deployment!</h1>
+    <h3>Click <a href=""></a>here </a> to see my nice projects called chess</h3>
   </body>
 </html>
